log
Wed Mar 18 01:34:46 AM UTC 2026: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
a357f9e
Wed Mar 18 01:49:36 AM UTC 2026: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:16: error: invalid use of undefined type ‘struct List’
   62 |       suma += L[i];
      |                ^
exercises.c:62:15: error: invalid use of incomplete typedef ‘List’
   62 |       suma += L[i];
      |               ^
bada6ad
Wed Mar 18 01:54:29 AM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
936a0e5
Thu Mar 19 07:08:31 PM UTC 2026: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:77:15: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   77 |    int dato = first(L);
      |               ^~~~~
exercises.c:77:8: error: unused variable ‘dato’ [-Werror=unused-variable]
   77 |    int dato = first(L);
      |        ^~~~
cc1: all warnings being treated as errors
3c41c05
Thu Mar 19 07:09:22 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:77:10: error: unused variable ‘dato’ [-Werror=unused-variable]
   77 |    void* dato = first(L);
      |          ^~~~
cc1: all warnings being treated as errors
13926de
Thu Mar 19 07:13:25 PM UTC 2026: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:79:20: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   79 |       if (elem == *(int*)elem) popCurrent(L);
      |                    ^
cc1: all warnings being treated as errors
8ca28d0
Thu Mar 19 07:14:26 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:79:21: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   79 |       if (elem == *((int*)elem)) popCurrent(L);
      |                     ^
cc1: all warnings being treated as errors
33daab9
Thu Mar 19 07:15:35 PM UTC 2026: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
a8c6a88
Thu Mar 19 07:41:30 PM UTC 2026: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:93:18: error: comparison between pointer and integer [-Werror]
   93 |    while (top(P1 != -1)){
      |                  ^~
exercises.c:93:18: error: passing argument 1 of ‘top’ makes pointer from integer without a cast [-Wint-conversion]
   93 |    while (top(P1 != -1)){
      |               ~~~^~~~~
      |                  |
      |                  int
In file included from exercises.c:7:
stack.h:14:18: note: expected ‘Stack *’ {aka ‘List *’} but argument is of type ‘int’
   14 | void *top(Stack *stack) { return first(stack); }
      |           ~~~~~~~^~~~~
exercises.c:94:18: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   94 |       int elem = top(P1);
      |                  ^~~
exercises.c:95:17: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Wint-conversion]
   95 |       push(aux, elem);
      |                 ^~~~
      |                 |
      |                 int
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
exercises.c:98:20: error: comparison between pointer and integer [-Werror]
   98 |    while (top(aux) != -1){
      |                    ^~
exercises.c:99:18: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   99 |       int elem = top(aux);
      |                  ^~~
exercises.c:100:16: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Wint-conversion]
  100 |       push(P2, elem);
      |                ^~~~
      |                |
      |                int
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
77a09aa
